--- a/index.html
+++ b/index.html
@@ -3,11 +3,148 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
-
+    <header class="header">
+    <img src="./images/logo_place_header.svg" alt="Яндекс лого" class="logo logo_place_header">
+    <h1 class="header__title">Научиться учиться</h1>
+    <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+      <a href="#" class="link">Узнать &#8594;</a></p>
+      <img src="./images/header-image.png" alt="Печальный мальчик" class="header__main-illustration">
+      <div class="header__square-pic"></div>
+    </header>
+    <main class="content">
+      <section class="description">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+            <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+          </div>
+        </div>
+      </section>
+      <section class="digits">
+        <h2 class="section-title section-title_theme_light">Цифры и факты</h2>
+        <p class="section-subtitle section-subtitle_theme_light">Про учёбу и мозг</p>
+        <ul class="table table_theme_light list">
+          <li class="table__cell table__cell_theme_light">
+            <p class="table__heading table__heading_theme_light">86 миллиардов</p>
+            <p class="table__text table__text_theme_light">Число нейронов в мозге человека</p>
+          </li>
+          <li class="table__cell table__cell_theme_light">
+            <p class="table__heading table__heading_theme_light">2.1 миллиарда</p>
+            <p class="table__text table__text_theme_light">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text table__text_theme_light">Всемирный Банк, 2017</p>
+          </li>
+          <li class="table__cell table__cell_theme_light">
+            <p class="table__heading table__heading_theme_light">1000 терабайт</p>
+            <p class="table__text table__text_theme_light">Объём памяти человека</p>
+          </li>
+          <li class="table__cell table__cell_theme_light">
+            <p class="table__heading table__heading_theme_light">500 триллионов</p>
+            <p class="table__text table__text_theme_light">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          </li>
+          <li class="table__cell table__cell_theme_light">
+            <p class="table__heading table__heading_theme_light">420 миллионов</p>
+            <p class="table__text table__text_theme_light">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text table__text_theme_light">Всемирный Банк, 2017</p>
+          </li>
+          <li class="table__cell table__cell_theme_light">
+            <p class="table__heading table__heading_theme_light">17–20 лет</p>
+            <p class="table__text table__text_theme_light">Пик обучаемости</p>
+          </li>
+          <li class="table__cell table__cell_theme_light">
+            <p class="table__heading table__heading_theme_light">1885 год</p>
+            <p class="table__text table__text_theme_light">Открытие кривой забывания</p>
+          </li>
+          <li class="table__cell table__cell_theme_light">
+            <p class="table__heading table__heading_theme_light">1889 год</p>
+            <p class="table__text table__text_theme_light">Открытие условного рефлекса</p>
+          </li></ul>
+      </section>
+      <section class="feynman">
+        <h3 class="feynman__title">Метод Фейнмана</h3>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
+        <a href="#" class="feynman__link">Подробнее &#8594;</a>
+     </section>
+      <section class="kaufman">
+        <h4 class="section-title section-title_theme_dark">Принципы обучения</h4>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
+        <ul class="table table_theme_dark list">
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">1</p>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">2</p>
+            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">3</p>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">4</p>
+            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">5</p>
+            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">6</p>
+            <p class="table__text table__text_thdark">Устраните препятствия для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">7</p>
+            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">8</p>
+            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">9</p>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">10</p>
+            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+          </li>
+          </ul>
+          <div class="kaufman__triangle"></div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="footer__columns">
+        <div class="footer__column_content_copyright">
+          <img src="./images/logo_place_footer.svg" alt="Яндекс лого" class="logo logo_place_footer">
+          <h3 class="footer__author">&copy; Вероника Грабаровская</h3>
+        </div>
+        <nav class="footer__column footer__column_content_info">
+          <h3 class="footer__column-heading">О практикуме</h3>
+          <ul class="footer__column-links list">
+            <li><a href="#" class="footer__column-link">Главная</a></li>
+            <li><a href="#" class="footer__column-link">Концепция</a></li>
+            <li><a href="#" class="footer__column-link">Наставники</a></li>
+          </ul>
+        </nav>
+        <div class="footer__column footer__column_content_social">
+          <h3 class="footer__column-heading">Соцсети</h3>
+          <ul class="footer__column-links list">
+            <li><a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="Лого Facebook" class="footer__column-icon">Facebook</a></li>
+            <li><a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="Лого ВКонтакте" class="footer__column-icon">ВКонтакте</a></li>
+            <li><a href="#" class="footer__column-link"><img src="./images/instagram_color_white.svg" alt="Лого Instagram" class="footer__column-icon">Instagram</a></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </div>
 </body>
 </html>
+
