--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img src="./images/logo_place_header.svg" alt="Яндекс лого" class="logo logo_place_header">
     <h1 class="header__title">Научиться учиться</h1>
     <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-      <a href="#" class="link">Узнать &#8594;</a></p>
+      <a href="#" target="_blank" class="link">Узнать &#8594;</a></p>
       <img src="./images/header-image.png" alt="Печальный мальчик" class="header__main-illustration">
       <div class="header__square-pic"></div>
     </header>
@@ -29,91 +29,91 @@
         </div>
       </section>
       <section class="digits">
-        <h2 class="section-title section-title_theme_light">Цифры и факты</h2>
-        <p class="section-subtitle section-subtitle_theme_light">Про учёбу и мозг</p>
-        <ul class="table table_theme_light list">
-          <li class="table__cell table__cell_theme_light">
-            <p class="table__heading table__heading_theme_light">86 миллиардов</p>
-            <p class="table__text table__text_theme_light">Число нейронов в мозге человека</p>
+        <h2 class="section-title">Цифры и факты</h2>
+        <p class="section-subtitle">Про учёбу и мозг</p>
+        <ul class="table list">
+          <li class="table__cell">
+            <h3 class="table__heading">86 миллиардов</h3>
+            <p class="table__text">Число нейронов в мозге человека</p>
           </li>
-          <li class="table__cell table__cell_theme_light">
-            <p class="table__heading table__heading_theme_light">2.1 миллиарда</p>
-            <p class="table__text table__text_theme_light">Число нуждающихся в повышении квалификации</p>
-            <p class="table__text table__text_theme_light">Всемирный Банк, 2017</p>
+          <li class="table__cell">
+            <h3 class="table__heading">2.1 миллиарда</h3>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </li>
-          <li class="table__cell table__cell_theme_light">
-            <p class="table__heading table__heading_theme_light">1000 терабайт</p>
-            <p class="table__text table__text_theme_light">Объём памяти человека</p>
+          <li class="table__cell">
+            <h3 class="table__heading">1000 терабайт</h3>
+            <p class="table__text">Объём памяти человека</p>
           </li>
-          <li class="table__cell table__cell_theme_light">
-            <p class="table__heading table__heading_theme_light">500 триллионов</p>
-            <p class="table__text table__text_theme_light">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          <li class="table__cell">
+            <h3 class="table__heading">500 триллионов</h3>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </li>
-          <li class="table__cell table__cell_theme_light">
-            <p class="table__heading table__heading_theme_light">420 миллионов</p>
-            <p class="table__text table__text_theme_light">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-            <p class="table__text table__text_theme_light">Всемирный Банк, 2017</p>
+          <li class="table__cell">
+            <h3 class="table__heading">420 миллионов</h3>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </li>
-          <li class="table__cell table__cell_theme_light">
-            <p class="table__heading table__heading_theme_light">17–20 лет</p>
-            <p class="table__text table__text_theme_light">Пик обучаемости</p>
+          <li class="table__cell">
+            <h3 class="table__heading">17–20 лет</h3>
+            <p class="table__text">Пик обучаемости</p>
           </li>
-          <li class="table__cell table__cell_theme_light">
-            <p class="table__heading table__heading_theme_light">1885 год</p>
-            <p class="table__text table__text_theme_light">Открытие кривой забывания</p>
+          <li class="table__cell">
+            <h3 class="table__heading">1885 год</h3>
+            <p class="table__text">Открытие кривой забывания</p>
           </li>
-          <li class="table__cell table__cell_theme_light">
-            <p class="table__heading table__heading_theme_light">1889 год</p>
-            <p class="table__text table__text_theme_light">Открытие условного рефлекса</p>
+          <li class="table__cell">
+            <h3 class="table__heading">1889 год</h3>
+            <p class="table__text">Открытие условного рефлекса</p>
           </li></ul>
       </section>
       <section class="feynman">
-        <h3 class="feynman__title">Метод Фейнмана</h3>
+        <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a href="#" class="feynman__link">Подробнее &#8594;</a>
+        <a href="#" target="_blank" class="feynman__link">Подробнее &#8594;</a>
      </section>
       <section class="kaufman">
-        <h4 class="section-title section-title_theme_dark">Принципы обучения</h4>
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
         <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <ul class="table table_theme_dark list">
           <li class="table__cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">1</p>
+            <h3 class="table__heading">1</h3>
             <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">2</p>
+            <h3 class="table__heading">2</h3>
             <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">3</p>
+            <h3 class="table__heading">3</h3>
             <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">4</p>
+            <h3 class="table__heading">4</h3>
             <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">5</p>
+            <h3 class="table__heading">5</h3>
             <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">6</p>
+            <h3 class="table__heading">6</h3>
             <p class="table__text table__text_thdark">Устраните препятствия для занятий.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">7</p>
+            <h3 class="table__heading">7</h3>
             <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">8</p>
+            <h3 class="table__heading">8</h3>
             <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">9</p>
+            <h3 class="table__heading">9</h3>
             <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">10</p>
+            <h3 class="table__heading">10</h3>
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
           </ul>
@@ -124,7 +124,7 @@
       <div class="footer__columns">
         <div class="footer__column_content_copyright">
           <img src="./images/logo_place_footer.svg" alt="Яндекс лого" class="logo logo_place_footer">
-          <h3 class="footer__author">&copy; Вероника Грабаровская</h3>
+          <p class="footer__author">&copy; Вероника Грабаровская</p>
         </div>
         <nav class="footer__column footer__column_content_info">
           <h3 class="footer__column-heading">О практикуме</h3>
@@ -137,9 +137,9 @@
         <div class="footer__column footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
           <ul class="footer__column-links list">
-            <li><a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="Лого Facebook" class="footer__column-icon">Facebook</a></li>
-            <li><a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="Лого ВКонтакте" class="footer__column-icon">ВКонтакте</a></li>
-            <li><a href="#" class="footer__column-link"><img src="./images/instagram_color_white.svg" alt="Лого Instagram" class="footer__column-icon">Instagram</a></li>
+            <li><a href="#" target="_blank" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="Лого Facebook" class="footer__column-icon">Facebook</a></li>
+            <li><a href="#" target="_blank" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="Лого ВКонтакте" class="footer__column-icon">ВКонтакте</a></li>
+            <li><a href="#" target="_blank" class="footer__column-link"><img src="./images/instagram_color_white.svg" alt="Лого Instagram" class="footer__column-icon">Instagram</a></li>
           </ul>
         </div>
       </div>
