--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./pages/index.css">
   <title>Научиться учиться</title>
 </head>
 <body>
@@ -13,9 +12,9 @@
     <img src="./images/logo_place_header.svg" alt="Яндекс лого" class="logo logo_place_header">
     <h1 class="header__title">Научиться учиться</h1>
     <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-      <a href="#" target="_blank" class="link">Узнать &#8594;</a></p>
+      <a href="#" target="_blank" class="header__link">Узнать &#8594;</a></p>
       <img src="./images/header-image.png" alt="Печальный мальчик" class="header__main-illustration">
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation"></div>
     </header>
     <main class="content">
       <section class="description">
@@ -28,6 +27,59 @@
           </div>
         </div>
       </section>
+        <section class="techniques">
+          <h2 class="section-title">Техники обучения</h2>
+          <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+          <ul class="cards list">
+            <li class="cards__item">
+              <img src="./images/cards-attention.png" alt="Изображение книги" class="cards__image">
+              <h3 class="cards__title">Два вида внимания</h3>
+              <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+           </li>
+           <li class="cards__item">
+             <img src="./images/cards-recall.png" alt="Изображение скульптуры" class="cards__image">
+             <h3 class="cards__title">Recall</h3>
+             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+           </li>
+           <li class="cards__item">
+             <img src="./images/cards-interliving.png" alt="Изображение арт объекта" class="cards__image">
+             <h3 class="cards__title">Интерливинг</h3>
+             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+           </li>
+           <li class="cards__item">
+             <img src="./images/cards-question.png" alt="Изображение помещения с окнами" class="cards__image">
+             <h3 class="cards__title">Вопросы</h3>
+             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+           </li>
+           <li class="cards__item">
+             <img src="./images/cards-competence.png" alt="Изображение стопки книг" class="cards__image">
+             <h3 class="cards__title">Иллюзия компетентности</h3>
+             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+            </li>
+          </ul>
+        </section>
+        <section class="video">
+          <h2 class="section-title">Видео нa TED</h2>
+          <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+          <div class="video__iframes">
+              <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
+              <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
+            </div>
+        </section>
+        <section class="oakley">
+          <div class="two-columns">
+            <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+            <div class="two-columns__main-text">
+              <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
+            </div>
+          </div>
+        </section>
+        <section class="feynman">
+          <h2 class="feynman__title">Метод Фейнмана</h2>
+          <p class="feynman__subtitle">Выучить и не забыть.</p>
+          <a href="#" target="_blank" class="feynman__link">Подробнее &#8594;</a>
+          <img src="./images/feynman.png" alt="Портрет" class="feynman__img">
+       </section>
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
         <p class="section-subtitle">Про учёбу и мозг</p>
@@ -67,11 +119,19 @@
             <p class="table__text">Открытие условного рефлекса</p>
           </li></ul>
       </section>
-      <section class="feynman">
-        <h2 class="feynman__title">Метод Фейнмана</h2>
-        <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a href="#" target="_blank" class="feynman__link">Подробнее &#8594;</a>
-     </section>
+      <section class="khan">
+        <div class="khan__container">
+           <p class="khan__author">Салман Хан</p>
+           <h2 class="khan__title">Весь мир — школа</h2>
+           <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+           <p class="khan__quote-author">Джордж Лукас</p>
+           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <img src="./images/khan-book.jpg" alt="Изображение книги" class="khan__book-pic">
+            <a href="#" target="_blank" class="khan__buy-link">Купить книгу &#8594;</a>
+          </div>
+        </div>
+      </section>
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
         <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
@@ -117,7 +177,25 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
           </ul>
-          <div class="kaufman__triangle"></div>
+          <img src="./images/kaufman-triangle.svg" alt="Треугольник" class="kaufman__triangle rotation">
+      </section>
+      <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <ul class="resources__logo-zone list">
+          <li>
+            <a href="#" target="_blank" class="resources__link"><img src="./images/logo/resources-arzamas.svg" alt="Лого Arzamas" class="resources__logo"></a>
+          </li>
+          <li>
+            <a href="#" target="_blank" class="resources__link"><img src="./images/logo/resources-n1.svg" alt="Лого N+1" class="resources__logo"></a>
+          </li>
+          <li>
+            <a href="#" target="_blank" class="resources__link"><img src="./images/logo/resources-strelka.svg" alt="Лого Strelka"  class="resources__logo"></a>
+          </li>
+          <li>
+            <a href="#" target="_blank" class="resources__link"><img src="./images/logo/resources-polka.svg" alt="Лого ПОЛКА"  class="resources__logo"></a>
+          </li>
+        </ul>
       </section>
     </main>
     <footer class="footer">
@@ -129,9 +207,15 @@
         <nav class="footer__column footer__column_content_info">
           <h3 class="footer__column-heading">О практикуме</h3>
           <ul class="footer__column-links list">
-            <li><a href="#" class="footer__column-link">Главная</a></li>
-            <li><a href="#" class="footer__column-link">Концепция</a></li>
-            <li><a href="#" class="footer__column-link">Наставники</a></li>
+            <li>
+              <a href="#" class="footer__column-link">Главная</a>
+            </li>
+            <li>
+              <a href="#" class="footer__column-link">Концепция</a>
+            </li>
+            <li>
+              <a href="#" class="footer__column-link">Наставники</a>
+            </li>
           </ul>
         </nav>
         <div class="footer__column footer__column_content_social">
@@ -147,4 +231,3 @@
   </div>
 </body>
 </html>
-
