--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column_content_copyright">
+        <div class="footer__column footer__column_content_copyright">
           <img src="./images/logo_place_footer.svg" alt="Яндекс лого" class="logo logo_place_footer">
           <p class="footer__author">&copy; Вероника Грабаровская</p>
         </div>
